--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -6,7 +6,7 @@ description: 如何检验固定效应和随机效应的显著性.
 keywords: random effect, fixed effect, significant, lsmeans
 ---
 # 1.最小二乘均值的定义和背景
-最小二乘均值，least square means。SAS、单机版ASReml、R中的包lsmeans和ASReml-R都可以计算该值。
+最小二乘均值的定义（来自lsmeans包简介）：least-squares means (LS means for short) for a linear model are simply predictions-or averages thereof-over a regular grid of predictor settings which I call **the reference grid**, 简称为LS means。SAS、单机版ASReml、R中的包lsmeans和ASReml-R都可以计算该值。
 在动物育种中 ，lsmeans经常用作不同群体性能的比较。
 假定有3个群体，每个群体包含数量不等的家系，本文的目的是比较不同群体的生长性能，即收获体重的差异。
 # 2. 固定效应和随机效应的显著性检验
