--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -169,3 +169,26 @@ Wald F 检验，所有固定效应和协变量均达到极显著水平。
   17 Sex.TankID.StockingMeanBW         4     170.1    17.27            <.001
 ```
 
+## 2.4 最小二乘均值
+``` ASReml
+predict FamilyClass !TDIFF
+``` 
+上述语句放在模型语句后边，ASReml生成一个.pvs文件，包括三个群体的最小二乘均值:
+``` ASReml
+ Predicted values of HarvestBW                                       
+ Model terms involving  StockingMeanBW  are predicted at the average:       1.3630
+ The SIMPLE averaging set:  TankID Sex 
+ The ignored set: FamilyID 
+
+ FamilyClass     Predicted_Value Standard_Error Ecode
+ SPWP                    46.0236         0.7740 E
+ SP                      46.8604         0.3769 E
+ WP                      43.7606         0.8069 E
+ SED: Standard Error of Difference: Min      0.7881    Mean      0.8848    Max      1.0546 
+
+ Predicted values with t statistics
+   46.02    
+   46.86       1.06
+   43.76      -2.15  -3.82
+```
+在ASReml-R中，也提供了函数`predict`解析模型的输出结果。
