--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -191,4 +191,4 @@ predict FamilyClass !TDIFF
    46.86       1.06
    43.76      -2.15  -3.82
 ```
-在ASReml-R中，也提供了函数`predict`解析模型的输出结果。
+`!TDIFF`限定符，给出了最小二乘均值的T统计检验值。在ASReml-R中，也提供了函数`predict()`解析模型的输出结果。
