--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -191,4 +191,5 @@ predict FamilyClass !TDIFF
    46.86       1.06
    43.76      -2.15  -3.82
 ```
-`!TDIFF`限定符，给出了最小二乘均值的T统计检验值。在ASReml-R中，也提供了函数`predict()`解析模型的输出结果。
+`!TDIFF`限定符，给出了最小二乘均值的T统计检验值。在ASReml-R中，提供了`predict()`函数解析`asreml()`计算出的模型结果，计算最小二乘均值。
+对于lsmeans包，提供了`lsmeans()`函数，可以对lme4、nlme等线性混合效应包的输出结果进行解析，求解最小二乘均值。
