add the defination of ls means

--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -6,9 +6,24 @@ description: 如何检验固定效应和随机效应的显著性.
 keywords: random effect, fixed effect, significant, lsmeans
 ---
 # 1.最小二乘均值的定义和背景
-最小二乘均值的定义（来自lsmeans包简介）：least-squares means (LS means for short) for a linear model are simply predictions-or averages thereof-over a regular grid of predictor settings which I call **the reference grid**, 简称为LS means。SAS、单机版ASReml、R中的包lsmeans和ASReml-R都可以计算该值。
+## 1.1 最小二乘均值的定义（来自lsmeans包简介）
+
+least-squares means (LS means for short) for a linear model are simply predictions-or averages thereof-over a regular grid of predictor settings which I call **the reference grid**, 简称为LS means。Ls means的历史可以追溯到1960年，1977年Harvey写出了计算机程序LSML，并且贡献了SAS软件中的HARVEY过程。以后，lsmeans声明加入到了SAS的各种过程如GLM中。
+
+在协方差分析模型中 LS means与协变量校正均值（covariate-adjusted means）相同。在不同平衡因子试验中，每一个因子的LS means跟主效应均值非常相似，但是进行了不平衡校正。后边这种解释，跟未加权的均值（unweighted means)方法非常相似。
+
+LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980）][1]年详细的讨论了对于各种因子、嵌套和协方差模型，该如何定义最小二乘均值。Searle建议利用术语"predicted marginal means"来代替"least-squares means",可能更为合理。
+
+需要强调的两点：
+
+* 最小二乘均值根据参考表格（reference grid）计算
+* 一旦建立了参考表格，最小二乘均值就是基于表格的简单预测，或者说是预测值列表的边际均值（marginal means）。
+
+## 1.2 参考表格（reference grid）
+SAS、单机版ASReml、R中的包lsmeans和ASReml-R都可以计算该值。
 在动物育种中 ，lsmeans经常用作不同群体性能的比较。
 假定有3个群体，每个群体包含数量不等的家系，本文的目的是比较不同群体的生长性能，即收获体重的差异。
+
 # 2. 固定效应和随机效应的显著性检验
 ## 2.1 固定效应
 如果模型中同时包括固定效应和随机效应，首先建立只包括固定效应（除残差随机效应外）的模型，通过**Wald F**统计检验显著性。
@@ -172,7 +187,7 @@ Wald F 检验，所有固定效应和协变量均达到极显著水平。
 ## 2.4 最小二乘均值
 ``` ASReml
 predict FamilyClass !TDIFF
-``` 
+```
 上述语句放在模型语句后边，ASReml生成一个.pvs文件，包括三个群体的最小二乘均值:
 ``` ASReml
  Predicted values of HarvestBW                                       
@@ -193,3 +208,6 @@ predict FamilyClass !TDIFF
 ```
 `!TDIFF`限定符，给出了最小二乘均值的T统计检验值。在ASReml-R中，提供了`predict()`函数解析`asreml()`计算出的模型结果，计算最小二乘均值。  
 对于lsmeans包，提供了`lsmeans()`函数，可以对lme4、nlme等线性混合效应模型包的输出结果进行解析，求解最小二乘均值。
+
+[1] Searle SR, Speed FM, Milliken GA (1980). \Population marginal means in the linear model: An
+alternative to least squares means." The American Statistician, 34(4), 216{221.
