add oranges and Rmd file

--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -20,6 +20,52 @@ LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980
 * 一旦建立了参考表格，最小二乘均值就是基于表格的简单预测，或者说是预测值列表的边际均值（marginal means）。
 
 ## 1.2 参考表格（reference grid）
+* 如果预测对象是因子，那么因子中的每个水平作为参考水平。
+### 1.2.1 橙子售卖数据集
+oranges的数据集结构如下：
+
+* 两个品种，对应两个价格（price1和price2）和两个销量（sales1和sales2）；
+* 然后还有store和day两个列变量，分别表示售卖的商店和时间；
+* store和dya两个变量为因子类型，价格为整数类型，销量为数字类型。
+
+```r
+dim(oranges)
+```
+
+```
+## [1] 36  6
+```
+
+```r
+head(oranges)
+```
+
+```
+##   store day price1 price2  sales1  sales2
+## 1     1   1     37     61 11.3208  0.0047
+## 2     1   2     37     37 12.9151  0.0037
+## 3     1   3     45     53 18.8947  7.5429
+## 4     1   4     41     41 14.6739  7.0652
+## 5     1   5     57     41  8.6493 21.2085
+## 6     1   6     49     33  9.5238 16.6667
+```
+
+```r
+str(oranges)
+```
+
+```
+## 'data.frame':	36 obs. of  6 variables:
+##  $ store : Factor w/ 6 levels "1","2","3","4",..: 1 1 1 1 1 1 2 2 2 2 ...
+##  $ day   : Factor w/ 6 levels "1","2","3","4",..: 1 2 3 4 5 6 1 2 3 4 ...
+##  $ price1: int  37 37 45 41 57 49 49 53 53 53 ...
+##  $ price2: int  61 37 53 41 41 33 49 53 45 53 ...
+##  $ sales1: num  11.32 12.92 18.89 14.67 8.65 ...
+##  $ sales2: num  0.0047 0.0037 7.5429 7.0652 21.2085 ...
+```
+
+
+
 SAS、单机版ASReml、R中的包lsmeans和ASReml-R都可以计算该值。
 在动物育种中 ，lsmeans经常用作不同群体性能的比较。
 假定有3个群体，每个群体包含数量不等的家系，本文的目的是比较不同群体的生长性能，即收获体重的差异。
