不同平衡 to 不平衡

--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -10,7 +10,7 @@ keywords: random effect, fixed effect, significant, lsmeans
 
 least-squares means (LS means for short) for a linear model are simply predictions-or averages thereof-over a regular grid of predictor settings which I call **the reference grid**, 简称为LS means。Ls means的历史可以追溯到1960年，1977年Harvey写出了计算机程序LSML，并且贡献了SAS软件中的HARVEY过程。以后，lsmeans声明加入到了SAS的各种过程如GLM中。
 
-在协方差分析模型中 LS means与协变量校正均值（covariate-adjusted means）相同。在不同平衡因子试验中，每一个因子的LS means跟主效应均值非常相似，但是进行了不平衡校正。后边这种解释，跟未加权的均值（unweighted means)方法非常相似。
+在协方差分析模型中 LS means与协变量校正均值（covariate-adjusted means）相同。在不平衡因子试验中，每一个因子的LS means跟主效应均值非常相似，但是进行了不平衡校正。后边这种解释，跟未加权的均值（unweighted means)方法非常相似。
 
 LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980）](1)年详细的讨论了对于各种因子、嵌套和协方差模型，该如何定义最小二乘均值。Searle建议利用术语"predicted marginal means"来代替"least-squares means",可能更为合理。
 
