modify Searle linke

--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -12,7 +12,7 @@ least-squares means (LS means for short) for a linear model are simply predictio
 
 在协方差分析模型中 LS means与协变量校正均值（covariate-adjusted means）相同。在不平衡因子试验中，每一个因子的LS means跟主效应均值非常相似，但是进行了不平衡校正。后边这种解释，跟未加权的均值（unweighted means)方法非常相似。
 
-LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980）][a1]年详细的讨论了对于各种因子、嵌套和协方差模型，该如何定义最小二乘均值。Searle建议利用术语"predicted marginal means"来代替"least-squares means",可能更为合理。
+LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980）]年详细的讨论了对于各种因子、嵌套和协方差模型，该如何定义最小二乘均值。Searle建议利用术语"predicted marginal means"来代替"least-squares means",可能更为合理。
 
 需要强调的两点：
 
@@ -20,7 +20,7 @@ LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980
 * 一旦建立了参考表格，最小二乘均值就是基于表格的简单预测，或者说是预测值列表的边际均值（marginal means）。
 
 ## 1.2 参考表格（reference grid）
-* 为了计算预测值，我们需要定义一套参考水平（见下文）；
+为了计算预测值，我们需要定义一套参考水平（见下文）；
 * 参考水平的组合构成参考表格
 * 参考水平的获取方法
     * 如果是因子，那么因子的每个水平作为参考水平；
@@ -28,7 +28,7 @@ LS means 并不是很好理解，术语本身就会令人迷惑。[Searle（1980
     * 因此参考表格涉及到模型和数据两个层面。
 
 ### 1.2.1 橙子售卖数据集
-oranges的数据集结构如下：
+oranges的数据集(36行×6列)结构如下：
 
 * 两个品种，对应两个价格（price1和price2）和两个销量（sales1和sales2）；
 * 然后还有store和day两个列变量，分别表示售卖的商店和时间；
@@ -72,10 +72,10 @@ str(oranges)
 ### 1.2.2 计算最小二乘均值
 
 #### 1.2.2.1 建立模型
-接下来，我们看一下影响品种1销量（Sales1）的主要因素。
+建立模型，分析影响品种1销量（Sales1）的主要因素:  
 
-* 在模型中包括store,day, price1和price2等4个因素。
-* 其中store和day由于是因子变量，因此作为固定效应；price1和price2作为协变量。
+* 在模型中包括store,day, price1和price2等4个因素;
+* 其中store和day由于是因子变量，因此作为固定效应；price1和price2作为协变量;
 * 这里把price2纳入模型，是因为品种2的价格也会影响品种1的销量。
 
 ```r
@@ -476,5 +476,5 @@ predict FamilyClass !TDIFF
 `!TDIFF`限定符，给出了最小二乘均值的T统计检验值。在ASReml-R中，提供了`predict()`函数解析`asreml()`计算出的模型结果，计算最小二乘均值。  
 对于lsmeans包，提供了`lsmeans()`函数，可以对lme4、nlme等线性混合效应模型包的输出结果进行解析，求解最小二乘均值。
 
-[a1]: Searle SR, Speed FM, Milliken GA (1980). Population marginal means in the linear model: An
+Searle SR, Speed FM, Milliken GA (1980). Population marginal means in the linear model: A
 alternative to least squares means. The American Statistician, 34(4), 216-221.
