add 1.2.3 调整参考表格

--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -289,6 +289,31 @@ oranges.asreml.lsmeans$predictions$pvals
 ```
 从结果来看，利用lsmeans，手动汇总和asreml给出的结果都是一致的。上述结果有助于加深对于LS means的理解。
 
+### 1.2.3 调整参考表格
+在计算LS means的时候，可以考虑设置协变量的值，以及要预测的因子的水平。  
+譬如，我们可以设置在price1=50，price2=40以及price2=60水平上，只预测2,3,4三天的最小二乘均值。
+
+```r
+org.lsm <- lsmeans(oranges.lm1,"day",by="price2",at=list(price1=50,price2=c(40,60),day=c("2","3","4")))
+org.lsm
+```
+
+```
+## price2 = 40:
+##  day    lsmean       SE df  lower.CL upper.CL
+##  2    6.236227 1.887106 23  2.332452 10.14000
+##  3   13.405992 2.119376 23  9.021730 17.79025
+##  4    8.483710 1.866510 23  4.622540 12.34488
+## 
+## price2 = 60:
+##  day    lsmean       SE df  lower.CL upper.CL
+##  2    9.213169 2.109448 23  4.849443 13.57689
+##  3   16.382933 1.905216 23 12.441693 20.32417
+##  4   11.460651 2.178054 23  6.955003 15.96630
+## 
+## Results are averaged over the levels of: store 
+## Confidence level used: 0.95
+```
 
 # 2. 固定效应和随机效应的显著性检验
 
@@ -478,5 +503,5 @@ predict FamilyClass !TDIFF
 `!TDIFF`限定符，给出了最小二乘均值的T统计检验值。在ASReml-R中，提供了`predict()`函数解析`asreml()`计算出的模型结果，计算最小二乘均值。  
 对于lsmeans包，提供了`lsmeans()`函数，可以对lme4、nlme等线性混合效应模型包的输出结果进行解析，求解最小二乘均值。
 
-[1]\: Searle SR, Speed FM, Milliken GA (1980). Population marginal means in the linear model: A
+[1] Searle SR, Speed FM, Milliken GA (1980). Population marginal means in the linear model: A
 alternative to least squares means. The American Statistician, 34(4), 216-221.
