modify title of 2.

--- a/_posts/2017-06-10-最小二乘均值的估计模型.md
+++ b/_posts/2017-06-10-最小二乘均值的估计模型.md
@@ -315,7 +315,7 @@ org.lsm
 ## Confidence level used: 0.95
 ```
 
-# 2. 固定效应和随机效应的显著性检验
+# 2. 基于ASReml单机版的LS means实例分析
 
 在动物育种中 ，lsmeans经常用作不同群体性能的比较。
 假定有3个群体，每个群体包含数量不等的家系，本文的目的是比较不同群体的生长性能，即收获体重的差异。
