--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -12,16 +12,20 @@ keywords: 跳绳, 跑步, 体重, BMI
 ### 06-17
 
 * 跳绳：1000个
-
 * 走路步数：11000步
-
 * 跑步：200米
-
-* 体重：晚上 175.5斤
+* 体重：晚175.5斤
 
 ### 06-18
 
-  - 跳绳： 个
-  - 走路步数： 步
-  - 跑步： 米
-  - 体重： 早上173斤；晚上 斤
+* 跳绳：1200个
+* 走路步数：9116步；划船1个小时
+* 跑步：200米
+* 体重：早173斤；晚175.7斤
+  
+### 06-19  
+
+* 跳绳：个
+* 走路步数：步
+* 跑步：米
+* 体重：早 斤；晚 斤
