--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -32,7 +32,7 @@ keywords: 跳绳, 跑步, 体重, BMI
 
 ### 06-20  
 
-* 跳绳：个
-* 走路步数： 步
-* 跑步： 米
-* 体重：早173斤；晚 斤
+* 跳绳：1200个
+* 走路步数：6842步
+* 跑步：200米
+* 体重：早173斤；晚174斤
