add record for 06-21

--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -39,6 +39,13 @@ keywords: 跳绳, 跑步, 体重, BMI
 
 ### 06-21  
 
+* 跳绳：1200个
+* 走路步数：5000步
+* 跑步：400米
+* 体重：早173斤；晚176.5斤
+
+### 06-22  
+
 * 跳绳：个
 * 走路步数：步
 * 跑步：米
