--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -46,7 +46,7 @@ keywords: 跳绳, 跑步, 体重, BMI
 
 ### 06-22  
 
-* 跳绳：个
-* 走路步数：步
-* 跑步：米
-* 体重：早172.6斤；晚斤
+* 跳绳：0个
+* 走路步数：12323步
+* 跑步：0米
+* 体重：早172.6斤；晚176.6斤
