add records for three days from 06-23 to 06-25

--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -53,7 +53,28 @@ keywords: 跳绳, 跑步, 体重, BMI
 
 ### 06-23  
 
-* 跳绳：个
-* 走路步数：步
+* 跳绳：0个
+* 走路步数：2000步
 * 跑步：0米
-* 体重：早176斤；晚斤
+* 体重：早176斤；晚?斤
+
+### 06-24  
+
+* 跳绳：0个
+* 走路步数：12000步
+* 跑步：0米
+* 体重：早?斤；晚?斤
+
+### 06-25  
+
+* 跳绳：0个
+* 走路步数：0步
+* 跑步：0米
+* 体重：早171.4斤；晚175.5斤
+
+### 06-26  
+
+* 跳绳：0个
+* 走路步数：0步
+* 跑步：0米
+* 体重：早171.4斤；晚175.5斤
