add record for 2017-06-26

--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -75,6 +75,13 @@ keywords: 跳绳, 跑步, 体重, BMI
 ### 06-26  
 
 * 跳绳：0个
+* 走路步数：13000步
+* 跑步：0米
+* 体重：早171斤；晚174斤
+
+### 06-27  
+
+* 跳绳：0个
 * 走路步数：0步
 * 跑步：0米
-* 体重：早171.4斤；晚175.5斤
+* 体重：早172斤；晚？斤
