--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -82,6 +82,13 @@ keywords: 跳绳, 跑步, 体重, BMI
 ### 06-27  
 
 * 跳绳：0个
+* 走路步数：4875步
+* 跑步：0米
+* 体重：早172斤；晚172.8斤
+
+### 06-28  
+
+* 跳绳：0个
 * 走路步数：0步
 * 跑步：0米
-* 体重：早172斤；晚？斤
+* 体重：早?斤；晚?斤
