--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -106,3 +106,31 @@ keywords: 跳绳, 跑步, 体重, BMI
 * 走路步数：0步
 * 跑步：0米
 * 体重：早172斤；晚172.3斤
+
+### 07-01  
+
+* 跳绳：0个
+* 走路步数：11741步
+* 跑步：0米
+* 体重：早?斤；晚?斤
+
+### 07-02  
+
+* 跳绳：1200个
+* 走路步数：8271步
+* 跑步：0米
+* 体重：早?斤；晚?斤
+
+### 07-03  
+
+* 跳绳：0个
+* 走路步数：9920步
+* 跑步：0米
+* 体重：早172斤；晚172斤
+
+### 07-04  
+
+* 跳绳：0个
+* 走路步数：0步
+* 跑步：0米
+* 体重：早170.2斤；晚?斤
