--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -131,6 +131,13 @@ keywords: 跳绳, 跑步, 体重, BMI
 ### 07-04  
 
 * 跳绳：0个
+* 走路步数：7000步
+* 跑步：0米
+* 体重：早170.2斤；晚172.6斤
+
+### 07-05  
+
+* 跳绳：0个
 * 走路步数：0步
 * 跑步：0米
 * 体重：早170.2斤；晚?斤
