update aggregation usage

--- a/_posts/2017-07-03-data.table学习笔记1.md
+++ b/_posts/2017-07-03-data.table学习笔记1.md
@@ -274,6 +274,303 @@ flights.JFK.num
 ```
 ## [1] 8422
 ```
+# 3.聚合
+## 3.1 分组
+获得每个机场起飞航班数
+
+```r
+flights.dep.num.per.airport <- flights[,.(.N),by=.(origin)]
+flights.dep.num.per.airport
+```
+
+```
+##    origin     N
+## 1:    JFK 81483
+## 2:    LGA 84433
+## 3:    EWR 87400
+```
+当参数j和by，也就是第2个和第3个参数只有1列时，可以不用`.()`。上述代码可以简化为：
+
+```r
+flights.dep.num.per.airport <- flights[,.N,by=origin]
+flights.dep.num.per.airport
+```
+
+```
+##    origin     N
+## 1:    JFK 81483
+## 2:    LGA 84433
+## 3:    EWR 87400
+```
+获取一个制定航空公司在每个机场的起飞航班数，譬如美航（AA）。
+在`i`参数中设置条件过滤需要的行。
+
+```r
+flights.AA.dep.num.per.airport <- flights[carrier == "AA",.(.N),by=.(origin)]
+flights.AA.dep.num.per.airport
+```
+
+```
+##    origin     N
+## 1:    JFK 11923
+## 2:    LGA 11730
+## 3:    EWR  2649
+```
+获取AA航空公司在所有机场起飞和降落的航班数
+
+```r
+flights.AA.dep.dest.num.per.airport <- flights[carrier == "AA",.(.N),by=.(origin,dest)]
+flights.AA.dep.dest.num.per.airport
+```
+
+```
+##     origin dest    N
+##  1:    JFK  LAX 3387
+##  2:    LGA  PBI  245
+##  3:    EWR  LAX   62
+##  4:    JFK  MIA 1876
+##  5:    JFK  SEA  298
+##  6:    EWR  MIA  848
+##  7:    JFK  SFO 1312
+##  8:    JFK  BOS 1173
+##  9:    JFK  ORD  432
+## 10:    JFK  IAH    7
+## 11:    JFK  AUS  297
+## 12:    EWR  DFW 1618
+## 13:    LGA  ORD 4366
+## 14:    JFK  STT  229
+## 15:    JFK  SJU  690
+## 16:    LGA  MIA 3334
+## 17:    LGA  DFW 3785
+## 18:    JFK  LAS  595
+## 19:    JFK  MCO  597
+## 20:    JFK  EGE   85
+## 21:    JFK  DFW  474
+## 22:    JFK  SAN  299
+## 23:    JFK  DCA  172
+## 24:    EWR  PHX  121
+##     origin dest    N
+```
+想进一步分析在所有机场，每个月起降的平均延误时间。
+
+```r
+flights.AA.dep.dest.stats.per.airport <- flights[carrier == "AA",.(.N,MeanArrDelay=mean(arr_delay),MeanDepDelay=mean(dep_delay)),by=.(origin,dest,month)]
+flights.AA.dep.dest.stats.per.airport
+```
+
+```
+##      origin dest month   N MeanArrDelay MeanDepDelay
+##   1:    JFK  LAX     1 249     6.590361   14.2289157
+##   2:    LGA  PBI     1  58    -7.758621    0.3103448
+##   3:    EWR  LAX     1  30     1.366667    7.5000000
+##   4:    JFK  MIA     1 179    15.720670   18.7430168
+##   5:    JFK  SEA     1  28    14.357143   30.7500000
+##  ---                                                
+## 196:    LGA  MIA    10 278    -6.251799   -1.4208633
+## 197:    JFK  MIA    10 217    -1.880184    6.6774194
+## 198:    EWR  PHX    10  31    -3.032258   -4.2903226
+## 199:    JFK  MCO    10  62   -10.048387   -1.6129032
+## 200:    JFK  DCA    10  31    16.483871   15.5161290
+```
+分组结果如何按照升降序排列。需要keyby参数代替by。
+
+```r
+flights.AA.dep.dest.stats.per.airport <- flights[carrier == "AA",.(.N,MeanArrDelay=mean(arr_delay),MeanDepDelay=mean(dep_delay)),keyby=.(origin,dest,month)]
+flights.AA.dep.dest.stats.per.airport
+```
+
+```
+##      origin dest month   N MeanArrDelay MeanDepDelay
+##   1:    EWR  DFW     1 159     6.427673   10.0125786
+##   2:    EWR  DFW     2 136    10.536765   11.3455882
+##   3:    EWR  DFW     3 163    12.865031    8.0797546
+##   4:    EWR  DFW     4 164    17.792683   12.9207317
+##   5:    EWR  DFW     5 164    18.487805   18.6829268
+##  ---                                                
+## 196:    LGA  PBI     1  58    -7.758621    0.3103448
+## 197:    LGA  PBI     2  52    -7.865385    2.4038462
+## 198:    LGA  PBI     3  61    -5.754098    3.0327869
+## 199:    LGA  PBI     4  60   -13.966667   -4.7333333
+## 200:    LGA  PBI     5  14   -10.357143   -6.8571429
+```
+## 3.2 管道符 chaining
+类似于 %>% ，实现连续操作，避免中间变量的生成。这个是非常强大的操作。
+
+```r
+ans <- flights[carrier == "AA", .N, by=.(origin, dest)][order(origin, -dest)]
+head(ans,10)
+```
+
+```
+##     origin dest    N
+##  1:    EWR  PHX  121
+##  2:    EWR  MIA  848
+##  3:    EWR  LAX   62
+##  4:    EWR  DFW 1618
+##  5:    JFK  STT  229
+##  6:    JFK  SJU  690
+##  7:    JFK  SFO 1312
+##  8:    JFK  SEA  298
+##  9:    JFK  SAN  299
+## 10:    JFK  ORD  432
+```
+可以多个表达式链接`DT[...][...][...][...]`，另外一种形式，也是可以接受的：  
+```
+DT[...
+][...
+][...
+]
+```
+## 3.3 by参数表达式
+参数by也可以接受表达式
+譬如，想看一下有多少航班起飞延误但却提前／准时到达的，有多少航班起飞和到达都延误了。
+
+```r
+ans <- flights[, .N, .(dep_delay>0, arr_delay>0)]
+ans
+```
+
+```
+##    dep_delay arr_delay      N
+## 1:      TRUE      TRUE  72836
+## 2:     FALSE      TRUE  34583
+## 3:     FALSE     FALSE 119304
+## 4:      TRUE     FALSE  26593
+```
+这也是一个比较牛逼的用法。
+
+## 3.4 对多列同时进行统一运算
+
+譬如有1000列，要对每一列进行均值计算。传统可以通过lapply函数来进行。如果存在分组的情况，该如何操作？data.table提供了`.SD`，表示Subset of Data，本身是一个data.table，包括**通过by分组后的每一组**。
+实例来看一下，对于起飞机场的一个分组
+
+```r
+flights.SD <- flights[,.(origin,dep_time,arr_time,air_time,distance,hour,min)][,.SD,by=origin]
+flights.SD
+```
+
+```
+##         origin dep_time arr_time air_time distance hour min
+##      1:    JFK      914     1238      359     2475    9  14
+##      2:    JFK     1157     1523      363     2475   11  57
+##      3:    JFK     1902     2224      351     2475   19   2
+##      4:    JFK     1347     1706      350     2475   13  47
+##      5:    JFK     2133       37      338     2475   21  33
+##     ---                                                    
+## 253312:    EWR     1242     1549      344     2565   12  42
+## 253313:    EWR     2121     2224      100      719   21  21
+## 253314:    EWR     1049     1335      326     2454   10  49
+## 253315:    EWR     1653     1910      291     2227   16  53
+## 253316:    EWR      854     1147      189     1400    8  54
+```
+每个分组，按照origin整齐排列。
+对于除了分组列外的其他列，统一求平均值，并且保留两位小数。
+
+```r
+flights.SD.mean <- flights[,.(origin,dep_time,arr_time,air_time,distance,hour,min)][,lapply(.SD,mean),by=origin][,round(.SD,2),by=origin]
+flights.SD.mean
+```
+
+```
+##    origin dep_time arr_time air_time distance  hour   min
+## 1:    JFK  1359.69  1488.90   195.28  1413.86 13.27 32.34
+## 2:    LGA  1315.07  1500.38   116.46   777.47 12.82 33.20
+## 3:    EWR  1340.62  1493.54   159.68  1117.36 13.10 30.22
+```
+如何进一步获取制定列的均值。答案是通过.SDcols参数。
+
+```r
+flights.SD.mean <- flights[,.(origin,dep_time,arr_time,air_time,distance,hour,min)][,lapply(.SD,mean),.SDcols=c("dep_time","arr_time"),by=origin][,round(.SD,2),by=origin]
+flights.SD.mean
+```
+
+```
+##    origin dep_time arr_time
+## 1:    JFK  1359.69  1488.90
+## 2:    LGA  1315.07  1500.38
+## 3:    EWR  1340.62  1493.54
+```
+
+实现类似melt的功能，把多列合并为一列。
+首先生成一个数据集
+
+```r
+DT = data.table(ID = c("b","b","b","a","a","c"), a = 1:6, b = 7:12, c=13:18)
+DT
+```
+
+```
+##    ID a  b  c
+## 1:  b 1  7 13
+## 2:  b 2  8 14
+## 3:  b 3  9 15
+## 4:  a 4 10 16
+## 5:  a 5 11 17
+## 6:  c 6 12 18
+```
+然后，把a，b，c三列合并为1列。
+
+```r
+DT.new <- DT[,.(abc=c(a,b,c)),by=ID]
+DT.new
+```
+
+```
+##     ID abc
+##  1:  b   1
+##  2:  b   2
+##  3:  b   3
+##  4:  b   7
+##  5:  b   8
+##  6:  b   9
+##  7:  b  13
+##  8:  b  14
+##  9:  b  15
+## 10:  a   4
+## 11:  a   5
+## 12:  a  10
+## 13:  a  11
+## 14:  a  16
+## 15:  a  17
+## 16:  c   6
+## 17:  c  12
+## 18:  c  18
+```
+
+j参数非常强大，也可以a,b,c三列的结果，作为一个列表返回。
+
+```r
+DT.new.list <- DT[,.(abc=list(c(a,b,c))),by=ID]
+DT.new.list
+```
+
+```
+##    ID               abc
+## 1:  b      1,2,3,7,8,9,
+## 2:  a  4, 5,10,11,16,17
+## 3:  c           6,12,18
+```
+合并a，b，c三列，作为字符串。
+
+```r
+DT.new.str <- DT[,.(abc=paste(a,b,c,sep = "")),by=ID]
+DT.new.str
+```
+
+```
+##    ID   abc
+## 1:  b  1713
+## 2:  b  2814
+## 3:  b  3915
+## 4:  a 41016
+## 5:  a 51117
+## 6:  c 61218
+```
+
+
+
+
+
 
 
 
