add record for 07-08

--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -145,6 +145,27 @@ keywords: 跳绳, 跑步, 体重, BMI
 ### 07-06  
 
 * 跳绳：0个
-* 走路步数：？步
+* 走路步数：11411步
 * 跑步：0米
-* 体重：早170.3斤；晚？斤
+* 体重：早170.3斤；晚172.2斤
+
+### 07-07  
+
+* 跳绳：0个
+* 走路步数：7000步
+* 跑步：0米
+* 体重：早?斤；晚?斤
+
+### 07-08  
+
+* 跳绳：0个
+* 走路步数：10000步
+* 跑步：0米
+* 体重：早?斤；晚?斤
+
+### 07-09  
+
+* 跳绳：0个
+* 走路步数：7000步
+* 跑步：0米
+* 体重：早170.1斤；晚?斤
