--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -169,3 +169,17 @@ keywords: 跳绳, 跑步, 体重, BMI
 * 走路步数：7000步
 * 跑步：0米
 * 体重：早170.1斤；晚?斤
+
+### 07-10  
+
+* 跳绳：0个
+* 走路步数：11162步
+* 跑步：0米
+* 体重：早?斤；晚?斤
+
+### 07-11  
+
+* 跳绳：0个
+* 走路步数：7000步
+* 跑步：0米
+* 体重：早171斤；晚?斤
