add data.table note3 about key index

--- a/code/2017-07-07-data.table学习笔记3.md
+++ b/code/2017-07-07-data.table学习笔记3.md
@@ -1,12 +1,10 @@
----
-layout: post
-title: data.table学习笔记2
-categories: R 数据清洗 data.table
-description: data.table官方教程2，主要是对于数据集本身的更新（添加、删除和修改列内容）
-keywords: R, tidy, data.table
----
+# Untitled
+Sheng Luan  
+2017年7月11日  
+
 
 * data.table的特点：**减小计算复杂度**，降低**计算时间**。  
+
 # 1.主键
 
 利用主键进行subset，速度会更加快。
@@ -53,11 +51,11 @@ microbenchmark(flights[.("JFK")],flights.copy[origin == "JFK"])
 ```
 ## Unit: milliseconds
 ##                           expr      min       lq     mean   median
-##              flights[.("JFK")] 5.964915 7.334754 20.67206 7.647693
-##  flights.copy[origin == "JFK"] 7.850660 9.091748 12.64319 9.431278
-##        uq        max neval cld
-##  10.67492 1155.27618   100   a
-##  12.95127   80.45394   100   a
+##              flights[.("JFK")] 5.790643 6.959618 20.99991 7.534416
+##  flights.copy[origin == "JFK"] 7.116013 8.594922 12.14634 9.350903
+##         uq        max neval cld
+##   9.020537 1208.91805   100   a
+##  12.218280   57.92295   100   a
 ```
 
 * 因为已经将主键设置为 origin列了，所以只要直接指定"JFK"就可以了。这里 .()用来在data.table的主键（也就是flights 的 origin列）里，查找"JFK"。
@@ -150,6 +148,3 @@ key(flights.copy)
 
 * 函数 key() 返回主键列名的字符型向量。
 * 如果data.table没有设置过主键，返回 NULL。
-
-
-
