--- a/code/2017-07-12-data.table学习笔记3.md
+++ b/code/2017-07-12-data.table学习笔记3.md
@@ -1,10 +1,12 @@
+ ---
+title: "Untitled"
+author: "Sheng Luan"
+date: "2017年7月11日"
+output: 
+  html_document: 
+    keep_md: yes
 ---
-layout: post
-title: data.table学习笔记3
-categories: R 数据清洗 data.table
-description: data.table官方教程3，主要是对于数据集，设置主键，提升数据管理和操作的速度。
-keywords: R, tidy, data.table
----
+
 
 * data.table的特点：**减小计算复杂度**，降低**计算时间**。  
 
