--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -217,11 +217,11 @@ keywords: 跳绳, 跑步, 体重, BMI
 * 跳绳：0个
 * 走路步数：7000步
 * 跑步：0米
-* 体重：早？斤；晚171.9斤
+* 体重：早？斤；晚169.9斤
 
 ### 07-17  
 
 * 跳绳：0个
-* 走路步数：7000步
+* 走路步数：步
 * 跑步：0米
-* 体重：早？斤；晚?斤
+* 体重：早168.2斤；晚?斤
