add records to 07-20

--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -222,6 +222,30 @@ keywords: 跳绳, 跑步, 体重, BMI
 ### 07-17  
 
 * 跳绳：0个
-* 走路步数：步
+* 走路步数：4869步
 * 跑步：0米
-* 体重：早168.2斤；晚?斤
+* 体重：早168.2斤；晚170斤
+
+### 07-18  
+
+* 跳绳：0个
+* 走路步数：8995步
+* 跑步：0米
+* 体重：早167.7斤；晚170斤
+
+### 07-19  
+
+* 跳绳：0个
+* 走路步数：12619步
+* 跑步：0米
+* 体重：早169斤；晚171斤
+
+### 07-20  
+
+* 走路步数：步
+* 体重：早?斤；晚?斤
+
+### 07-21  
+
+* 走路步数：4869步
+* 体重：早168.2斤；晚170斤
