--- a/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -1,299 +1,40 @@
 ---
 layout: post
-title: data.table学习笔记4
-categories: R 数据清洗 data.table
-description: data.table官方教程4，主要是对于数据集，设置二级索引，提升数据管理和操作的速度。
-keywords: R, tidy, data.table
+title: 第一章 基于不同来源记录的遗传评估(Genetic evaluation with different sources of records)
+categories: EBV linear_model
+description: 第一章阅读笔记
+keywords: EBV
 ---
 
-* data.table的特点：**减小计算复杂度**，降低**计算时间**。  
+# 1.1 介绍
+育种值预测是大部分为了遗传改良而建立的育种程序不可或缺的一部分。准确地预测育种值，关键是能够获得哪些记录。在一个群体中，开始阶段能够获得的是个体记录，这些个体间可能存在亲缘关系，也可能不存在。在随后的世代中，后代和其他亲缘个体记录也会不断获的。因此，一开始可以用于育种值预测的主要是个体记录，以及少数亲属个体。在本章中，主要讨论利用个体记录以及来自其他亲缘信息预测育种值。此外（also），也讨论了复合不同来源和亲属信息计算选择指数的方法。  
 
-# 1.二级索引（Secondary index）
-## 1.1 什么是二级索引
-二级索引与主键的区别：    
-* 不在内存中将整个data.table数据集重新排序。它只会计算某列的顺序，将这个顺序向量保存在一个附件的属性index里面。
-* 一个data.table可以有多个二级索引。
-见下面代码实例。
+# 1.2 基础模型
+环境和遗传因素决定动物个体的每一个表型观测值。因此可以通过1.1模型对表型观测值进行分解：
 
+表型观测值=环境效应+遗传效应+残差效应
 
-```r
-setindex(flights,origin)
-head(flights)
-```
+用公式书写为：
 
-```
-##    year month day dep_time dep_delay arr_time arr_delay cancelled carrier
-## 1: 2014     1   1      914        14     1238        13         0      AA
-## 2: 2014     1   1     1157        -3     1523        13         0      AA
-## 3: 2014     1   1     1902         2     2224         9         0      AA
-## 4: 2014     1   1      722        -8     1014       -26         0      AA
-## 5: 2014     1   1     1347         2     1706         1         0      AA
-## 6: 2014     1   1     1824         4     2145         0         0      AA
-##    tailnum flight origin dest air_time distance hour min
-## 1:  N338AA      1    JFK  LAX      359     2475    9  14
-## 2:  N335AA      3    JFK  LAX      363     2475   11  57
-## 3:  N327AA     21    JFK  LAX      351     2475   19   2
-## 4:  N3EHAA     29    LGA  PBI      157     1035    7  22
-## 5:  N319AA    117    JFK  LAX      350     2475   13  47
-## 6:  N3DEAA    119    EWR  LAX      339     2454   18  24
-```
-## 1.2 查看增加的index属性
+模型1.1
+$$
+y_{ij}=\mu_{i}+g_{i}+e_{ij}
+$$
+其中$y_{ij}$表示第$i^{th}$个体的第j个测定记录；$\mu_{i}$表示可剖分的非随机环境效应，主要是指固定效应，如窝组、出生年份、性别等；$g_{i}$是个体i基因型的加性（$g_{a}$）、显性($g_{d}$)和上位epitatic($g_{e}$)遗传效应；$e_{ij}$是影响个体i的随机环境效应之和。
 
-```r
-names(attributes(flights))
-```
+上文g中的加性遗传值（$g_{a}$），指的是个体来自父本和母本基因的加性效应均值，被称为育种值（breeding value）。***每个亲本贡献自身基因的一半给它的后代**。亲本传递给后代的一半基因，其多次抽样的均值，称作该亲本的传递能力（**transmitting ability**），是该亲本加性遗传值的一半。因此后代育种值等于其双亲传递能力之和。
+因为加性遗传值是从亲本传递给子代的基因的函数，它是仅有的可以选择的元素（相对于显性和上位）。显性和上位表示位点内、位点间的交互，通常假定这些效应很少是显著的，一般包括$e^{*}_{ij}$效应中。因此模型1.1可以改写为：
 
-```
-## [1] "names"             "row.names"         "class"            
-## [4] ".internal.selfref" "index"
-```
-## 1.3 查看data.table的二级索引
+模型1.2
+$$
+y_{ij}=\mu+g_{ai}+e^{*}_{ij}
+$$
+其中，$e^{*}_{ij}$表示随机环境效应、显性和上位遗传值之和。模型1.2形式，适用于动物育种大部分育种值预测问题。通常假定y符合多变量正态分布，这其中的含义表示性状是有无数个加性基因决定，每个基因的效应是相同并且微小的，并且这些基因分布在非连锁位点上，也就是通常说的**微效多基因模型**（infinitesimal model）。并且，进一步假定y、g和e的方差var(y)、var(g)、var(e^{*})是已知的,并且配对个体间不存在任何相关（$cov(e^{*},e^{*})=0$）（不是特别理解）。而且，$\mu$代表在相同的管理组下所有个体的平均性能，例如在同一个管理系统下，相同的年龄和性别，因此假定$\mu$也是已知的。那么问题就简单了，从模型1.2中，可以看出，预测育种值的问题，已经简化为**根据剖分出的非随机环境效应调整表型观测值问题，近似等于加权动物个体和他们的亲缘个体的测定记录**。
 
-```r
-indices(flights)
-```
+根据前边的解释，个体i的育种值$a_{i}$可以进一步剖分：
+$$
+a_{i}=g_{ai}=\frac{1}{2}a_{s}+\frac{1}{2}a_{d}+m_{i}
+$$
+其中$a_{s}$和$a_{d}$分别表示父本和母本的育种值，$m_{i}$是个体i的育种值与双亲育种值均值的偏差，也就是孟德尔抽样(Mendelian sampling)。从遗传上分析（inheritance），孟德尔抽样的本质，是由于每一个亲本仅仅从它的基因库中随机抽取了一半给它的后代（基于染色体的分离和自由组合规律，个体的一半基因，会有很多种组合）。因此，一对父母产生的后代，其基因肯定不会完全相同，他们之间存在着遗传变异。孟德尔抽样，可以理解为，个体来自双亲的加性基因的均值（父母本平均，不是基因平均）与来自双亲的所有可能后代的均值之差。
 
-```
-## [1] "origin"
-```
-## 1.4 删除二级索引
-
-```r
-setindex(flights,NULL)
-indices(flights)
-```
-
-```
-## NULL
-```
-重新创建一个索引
-
-```r
-setindex(flights,origin,dest)
-indices(flights)
-```
-
-```
-## [1] "origin__dest"
-```
-
-```r
-setindex(flights,origin)
-```
-## 1.5 什么情况下使用二级索引
-
-* 如果循环使用一个主键，那么重排序是可以的；
-* 如果经常更换主键，那么重排序会耗费大量的时间，使用二级索引非常有用的。
-
-# 2. 使用参数on更为方便的进行二级索引和提取子集
-## 2.1 利用参数i提取子集
-提取origin是JFK的所有航班记录：
-
-```r
-flights[.("JFK"),on="origin"]
-```
-
-```
-##        year month day dep_time dep_delay arr_time arr_delay cancelled
-##     1: 2014     1   1      914        14     1238        13         0
-##     2: 2014     1   1     1157        -3     1523        13         0
-##     3: 2014     1   1     1902         2     2224         9         0
-##     4: 2014     1   1     1347         2     1706         1         0
-##     5: 2014     1   1     2133        -2       37       -18         0
-##    ---                                                               
-## 81479: 2014    10  31     1705        -4     2024       -21         0
-## 81480: 2014    10  31     1827        -2     2133       -37         0
-## 81481: 2014    10  31     1753         0     2039       -33         0
-## 81482: 2014    10  31      924        -6     1228       -38         0
-## 81483: 2014    10  31     1124        -6     1408       -38         0
-##        carrier tailnum flight origin dest air_time distance hour min
-##     1:      AA  N338AA      1    JFK  LAX      359     2475    9  14
-##     2:      AA  N335AA      3    JFK  LAX      363     2475   11  57
-##     3:      AA  N327AA     21    JFK  LAX      351     2475   19   2
-##     4:      AA  N319AA    117    JFK  LAX      350     2475   13  47
-##     5:      AA  N323AA    185    JFK  LAX      338     2475   21  33
-##    ---                                                              
-## 81479:      UA  N596UA    512    JFK  SFO      337     2586   17   5
-## 81480:      UA  N568UA    514    JFK  SFO      344     2586   18  27
-## 81481:      UA  N518UA    535    JFK  LAX      320     2475   17  53
-## 81482:      UA  N512UA    541    JFK  SFO      343     2586    9  24
-## 81483:      UA  N590UA    703    JFK  LAX      323     2475   11  24
-```
-* 这段语句执行的subset是通过创建二级索引，基于快速二分法搜索的。但记住，它不会把这个二级索引自动创建为data.table的一个属性。
-* 如果已经添加了一个二级索引了，那么参数on就可以直接使用这个二级索引，而不是再对整个航班信息flights进行计算。
-* on必须是一个字符型的向量
-
-## 2.2 进一步选择列
-筛选满足条件origin="LGA" 和dest="TPA"的数据集，并且只返回arr_delay列。
-
-```r
-flights[.("LGA","TPA"),.(arr_delay),on=c("origin","dest")]
-```
-
-```
-##       arr_delay
-##    1:         1
-##    2:        14
-##    3:       -17
-##    4:        -4
-##    5:       -12
-##   ---          
-## 1848:        39
-## 1849:       -24
-## 1850:       -12
-## 1851:        21
-## 1852:       -11
-```
-## 2.3 进一步对结果按照降序排列
-
-```r
-flights[.("LGA","TPA"),.(arr_delay),on=c("origin","dest")][order(-arr_delay)]
-```
-
-```
-##       arr_delay
-##    1:       486
-##    2:       380
-##    3:       351
-##    4:       318
-##    5:       300
-##   ---          
-## 1848:       -40
-## 1849:       -43
-## 1850:       -46
-## 1851:       -48
-## 1852:       -49
-```
-
-## 2.4 参数j计算
-找出满足条件origin="LGA" 和dest="TPA"的航班记录中，最长到达延误时间。
-
-```r
-flights[.("LGA","TPA"),.(MaxArrDelay=max(arr_delay),MinArrDelay=min(arr_delay)),on=c("origin","dest")]
-```
-
-```
-##    MaxArrDelay MinArrDelay
-## 1:         486         -49
-```
-
-## 2.5 参数by聚合
-
-```r
-flights[.("JFK"),max(dep_delay),keyby=month,on="origin"]
-```
-
-```
-##     month   V1
-##  1:     1  881
-##  2:     1 1014
-##  3:     1  920
-##  4:     1 1241
-##  5:     1  853
-##  6:     1  798
-##  7:     1  926
-##  8:     1  772
-##  9:     1  553
-## 10:     1  848
-```
-
-## 2.6 参数j里使用操作符":="进行sub-assign
-
-是继续使用以前的例子，hour中的24替换为0。
-
-```r
-flights[,sort(unique(hour))]
-```
-
-```
-##  [1]  0  1  2  3  4  5  6  7  8  9 10 11 12 13 14 15 16 17 18 19 20 21 22
-## [24] 23 24
-```
-
-```r
-flights[.(24L),hour:=0L,on="hour"]
-```
-* 这是二级索引的一大优点。以前章节，只是为了更新一些行的hour列的取值，我们不得不调用函数setkey()将hour列设置为主键，这必须对整个data.table进行重新排序。但是现在，用参数on，原数据的顺序并没有改变，操作反而更快了！而代码还是如此简洁。
-
-# 3.自动索引
-
-data.table 会默认对`==`和`%in%`操作符自动创建索引，并且作为data.table的属性保存起来。
-
-首先创建1个非常大的data.table来测试性能。
-
-```r
-set.seed(1L)
-dt = data.table(x=sample(1e5L,1e7L,TRUE),y=runif(100L))
-print(object.size(dt),units = "Mb")
-```
-
-```
-## 114.4 Mb
-```
-列出dt的属性。
-
-```r
-names(attributes(dt))
-```
-
-```
-## [1] "names"             "row.names"         "class"            
-## [4] ".internal.selfref"
-```
-第一次使用`==`或`%in%`时，会自动创建一个二级索引，用来进行subset。
-
-```r
-(t1 <- system.time(ans <- dt[x==989L]))
-```
-
-```
-##    user  system elapsed 
-##    0.23    0.03    0.27
-```
-
-```r
-names(attributes(dt))
-```
-
-```
-## [1] "names"             "row.names"         "class"            
-## [4] ".internal.selfref" "index"
-```
-重新进行一次subset，由于索引已经创建，速度会很快。
-
-```r
-(t2 <- system.time(ans <- dt[x==989L]))
-```
-
-```
-##    user  system elapsed 
-##       0       0       0
-```
-从两次对比时间，可以看出，第二次时间已经大为缩短。到写这篇博客为止，还没有对>=，<=等符号自动二级索引。
-
-
-```r
-indices(dt)
-```
-
-```
-## [1] "x"
-```
-
-```r
-setindex(dt,NULL)
-(t3 <- system.time(ans <- dt[x>=989L]))
-```
-
-```
-##    user  system elapsed 
-##    0.16    0.03    0.22
-```
-
-```r
-indices(dt)
-```
-
-```
-## NULL
-```
+在育种程序中，准确地预测育种值是非常重要的。因为在遗传改良过程中，必须要准确地选择那些真正属于高育种值的个体。根据可以用来进行选择的候选个体的类型和可以利用的信息，来决定使用何种预测育种值的方法。下一步讨论，如何利用不同的信息来源预测育种值。在许多遗传评估应用案例中，出现的PTA（predicted tranmitting ability）或者说ETA（estimated transmitting ability），通常指的是预测育种值的一半。
