add note1 for breeding value

--- a/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -22,10 +22,10 @@ $$
 y_{ij}=\mu_{i}+g_{i}+e_{ij}
 $$
 
-其中$y_{ij}$表示第$i^{th}$个体的第j个测定记录；$\mu_{i}$表示可剖分的非随机环境效应，主要是指固定效应，如窝组、出生年份、性别等；$g_{i}$是个体i基因型的加性（$g_{a}$）、显性($g_{d}$)和上位epitatic($g_{e}$)遗传效应；$e_{ij}$是影响个体i的随机环境效应之和。
+其中$$y_{ij}$$表示第$$i^{th}$$个体的第j个测定记录；$$\mu_{i}$$表示可剖分的非随机环境效应，主要是指固定效应，如窝组、出生年份、性别等；$$g_{i}$$是个体i基因型的加性（$$g_{a}$$）、显性($$g_{d}$$)和上位epitatic($$g_{e}$$)遗传效应；$$e_{ij}$$是影响个体i的随机环境效应之和。
 
-上文g中的加性遗传值（$g_{a}$），指的是个体来自父本和母本基因的加性效应均值，被称为育种值（breeding value）。***每个亲本贡献自身基因的一半给它的后代**。亲本传递给后代的一半基因，其多次抽样的均值，称作该亲本的传递能力（**transmitting ability**），是该亲本加性遗传值的一半。因此后代育种值等于其双亲传递能力之和。
-因为加性遗传值是从亲本传递给子代的基因的函数，它是仅有的可以选择的元素（相对于显性和上位）。显性和上位表示位点内、位点间的交互，通常假定这些效应很少是显著的，一般包括$e^{*}_{ij}$效应中。因此模型1.1可以改写为：
+上文g中的加性遗传值（$$g_{a}$$），指的是个体来自父本和母本基因的加性效应均值，被称为育种值（breeding value）。***每个亲本贡献自身基因的一半给它的后代**。亲本传递给后代的一半基因，其多次抽样的均值，称作该亲本的传递能力（**transmitting ability**），是该亲本加性遗传值的一半。因此后代育种值等于其双亲传递能力之和。
+因为加性遗传值是从亲本传递给子代的基因的函数，它是仅有的可以选择的元素（相对于显性和上位）。显性和上位表示位点内、位点间的交互，通常假定这些效应很少是显著的，一般包括$$e^{*}_{ij}$$效应中。因此模型1.1可以改写为：
 
 模型1.2
 
@@ -33,14 +33,14 @@ $$
 y_{ij}=\mu+g_{ai}+e^{*}_{ij}
 $$
 
-其中，$e^{*}_{ij}$表示随机环境效应、显性和上位遗传值之和。模型1.2形式，适用于动物育种大部分育种值预测问题。通常假定y符合多变量正态分布，这其中的含义表示性状是有无数个加性基因决定，每个基因的效应是相同并且微小的，并且这些基因分布在非连锁位点上，也就是通常说的**微效多基因模型**（infinitesimal model）。并且，进一步假定y、g和e的方差var(y)、var(g)、var(e^{*})是已知的,并且配对个体间不存在任何相关（$cov(e^{*},e^{*})=0$）（不是特别理解）。而且，$\mu$代表在相同的管理组下所有个体的平均性能，例如在同一个管理系统下，相同的年龄和性别，因此假定$\mu$也是已知的。那么问题就简单了，从模型1.2中，可以看出，预测育种值的问题，已经简化为**根据剖分出的非随机环境效应调整表型观测值问题，近似等于加权动物个体和他们的亲缘个体的测定记录**。
+其中，$$e^{*}_{ij}$$表示随机环境效应、显性和上位遗传值之和。模型1.2形式，适用于动物育种大部分育种值预测问题。通常假定y符合多变量正态分布，这其中的含义表示性状是有无数个加性基因决定，每个基因的效应是相同并且微小的，并且这些基因分布在非连锁位点上，也就是通常说的**微效多基因模型**（infinitesimal model）。并且，进一步假定y、g和e的方差var(y)、var(g)、var(e^{*})是已知的,并且配对个体间不存在任何相关（$$cov(e^{*},e^{*})=0$$）（不是特别理解）。而且，$$\mu$$代表在相同的管理组下所有个体的平均性能，例如在同一个管理系统下，相同的年龄和性别，因此假定$$\mu$$也是已知的。那么问题就简单了，从模型1.2中，可以看出，预测育种值的问题，已经简化为**根据剖分出的非随机环境效应调整表型观测值问题，近似等于加权动物个体和他们的亲缘个体的测定记录**。
 
-根据前边的解释，个体i的育种值$a_{i}$可以进一步剖分：
+根据前边的解释，个体i的育种值$$a_{i}$$可以进一步剖分：
 
 $$
 a_{i}=g_{ai}=\frac{1}{2}a_{s}+\frac{1}{2}a_{d}+m_{i}
 $$
 
-其中$a_{s}$和$a_{d}$分别表示父本和母本的育种值，$m_{i}$是个体i的育种值与双亲育种值均值的偏差，也就是孟德尔抽样(Mendelian sampling)。从遗传上分析（inheritance），孟德尔抽样的本质，是由于每一个亲本仅仅从它的基因库中随机抽取了一半给它的后代（基于染色体的分离和自由组合规律，个体的一半基因，会有很多种组合）。因此，一对父母产生的后代，其基因肯定不会完全相同，他们之间存在着遗传变异。孟德尔抽样，可以理解为，个体来自双亲的加性基因的均值（父母本平均，不是基因平均）与来自双亲的所有可能后代的均值之差。
+其中$$a_{s}$$和$$a_{d}$$分别表示父本和母本的育种值，$$m_{i}$$是个体i的育种值与双亲育种值均值的偏差，也就是孟德尔抽样(Mendelian sampling)。从遗传上分析（inheritance），孟德尔抽样的本质，是由于每一个亲本仅仅从它的基因库中随机抽取了一半给它的后代（基于染色体的分离和自由组合规律，个体的一半基因，会有很多种组合）。因此，一对父母产生的后代，其基因肯定不会完全相同，他们之间存在着遗传变异。孟德尔抽样，可以理解为，个体来自双亲的加性基因的均值（父母本平均，不是基因平均）与来自双亲的所有可能后代的均值之差。
 
 在育种程序中，准确地预测育种值是非常重要的。因为在遗传改良过程中，必须要准确地选择那些真正属于高育种值的个体。根据可以用来进行选择的候选个体的类型和可以利用的信息，来决定使用何种预测育种值的方法。下一步讨论，如何利用不同的信息来源预测育种值。在许多遗传评估应用案例中，出现的PTA（predicted tranmitting ability）或者说ETA（estimated transmitting ability），通常指的是预测育种值的一半。
