--- a/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -37,6 +37,8 @@ $$
 
 根据前边的解释，个体i的育种值$$a_{i}$$可以进一步剖分：
 
+公式1.3
+
 $$
 a_{i}=g_{ai}=\frac{1}{2}a_{s}+\frac{1}{2}a_{d}+m_{i}
 $$
@@ -44,3 +46,62 @@ $$
 其中$$a_{s}$$和$$a_{d}$$分别表示父本和母本的育种值，$$m_{i}$$是个体i的育种值与双亲育种值均值的偏差，也就是孟德尔抽样(Mendelian sampling)。从遗传上分析（inheritance），孟德尔抽样的本质，是由于每一个亲本仅仅从它的基因库中随机抽取了一半给它的后代（基于染色体的分离和自由组合规律，个体的一半基因，会有很多种组合）。因此，一对父母产生的后代，其基因肯定不会完全相同，他们之间存在着遗传变异。孟德尔抽样，可以理解为，个体来自双亲的加性基因的均值（父母本平均，不是基因平均）与来自双亲的所有可能后代的均值之差。
 
 在育种程序中，准确地预测育种值是非常重要的。因为在遗传改良过程中，必须要准确地选择那些真正属于高育种值的个体。根据可以用来进行选择的候选个体的类型和可以利用的信息，来决定使用何种预测育种值的方法。下一步讨论，如何利用不同的信息来源预测育种值。在许多遗传评估应用案例中，出现的PTA（predicted tranmitting ability）或者说ETA（estimated transmitting ability），通常指的是预测育种值的一半。
+
+# 1.3 利用动物自身性能预测育种值
+# 1.3.1 单次记录
+对于个体，当仅可获得一个表型值记录时，个体i的估计育种值计算公式为:
+
+公式1.4
+
+$$\hat{a}_{i} = b(y_{i}-\mu)$$
+
+其中b是真实育种值对表型性能的回归系数；$$\mu$$ 是群体均值，假定$$\mu$$是已知的。
+
+公式1.5
+
+$$ b = \frac{cov(a,y)}{var(y)} = \frac{cov(a,a+e)}{var(y)} \\
+= \frac{\sigma^2_{a}}{\sigma^2_{y}} \\
+= h^2
+$$
+
+预测值等于调整后的记录值乘以遗传力。选择标准间的相关，在这个例子中是真实育种值与表型值间的相关，也称作预测的准确度。预测准确度，提供了一种评估不同选择标准的方法：相关度越高，选择标准更加适合用来预测育种值。在某些情况下，重复力（repeatability, $$r^2$$）也可以作为评估准确性的参数。当个体仅有一个观测值时，准确度计算公式为：
+
+公式1.6
+
+$$
+r_{a,y} = cov(a,y)/(\sigma_{a}\sigma_{y}) \\
+= \sigma^{2}_{a}/(\sigma_{a}\sigma_{y}) \\
+= h
+$$
+
+准确度为遗传力的开方。选择反应的计算公式（Falconer and Mackay, 1996）为:
+
+公式1.7
+
+$$
+R = ir^{2}_{a,y}\sigma_{y} = ih^{2}\sigma_{y}
+$$
+
+其中，i称作选择强度（selection intensity），以表型标准差为单位，表示选择个体超过群体均值的程度。
+
+育种值的方差（$$var(\hat{a}_{i})$$）表示为:  
+
+公式1.8
+
+$$
+var(\hat{a}_{i}) = var(by) = var(h_{2}y) \\
+= h^{4}\sigma^{2}_{y} \\
+= r^{2}_{a,y}h^{2}\sigma^{2}{y} \\
+= r^{2}_{a,y}\sigma^{2}_{a}
+$$
+
+例1.1
+一窝小母牛的一周岁体重均值为250kg，该性状的遗传力为0.45，如果其中一头小母牛周岁重320kg，请问它的育种值是多少？育种值估计的准确度是多少？
+
+根据公式1.4，育种值计算为：
+
+$$\hat{a}_{i} = 0.45*(320-250) =$$ 31.5kg。
+
+育种值估计的准确度(根据公式1.6计算)
+
+$$r_{a,y} = $$ 0.67。
