update record for healthy

--- a/_posts/2017-06-17-身体锻炼记录.md
+++ b/_posts/2017-06-17-身体锻炼记录.md
@@ -252,5 +252,25 @@ keywords: 跳绳, 跑步, 体重, BMI
 
 ### 07-22  
 
+* 走路步数：6402步
+* 体重：早?斤；晚?斤
+
+### 07-23  
+
+* 走路步数：6605步
+* 体重：早?斤；晚?斤
+
+### 07-24  
+
+* 走路步数：11265步
+* 体重：早?斤；晚171斤
+
+### 07-25  
+
 * 走路步数：4818步
-* 体重：早170斤；晚?斤
+* 体重：早172.8斤；晚?斤
+
+### 07-26  
+
+* 走路步数：?步
+* 体重：早?斤；晚?斤
