--- a/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
+++ b/_posts/2017-07-20-动物育种值预测中的线性模型学习笔记1.md
@@ -89,9 +89,9 @@ $$
 公式1.8
 
 $$
-var(\hat{a}_{i}) = var(by) = var(h_{2}y) \\
+var(\hat{a}_{i}) = var(by) = var(h^{2}y) \\
 = h^{4}\sigma^{2}_{y} \\
-= r^{2}_{a,y}h^{2}\sigma^{2}{y} \\
+= r^{2}_{a,y}h^{2}\sigma^{2}_{y} \\
 = r^{2}_{a,y}\sigma^{2}_{a}
 $$
 
